duniverse/lwt/test/ppx_expect/cases/let_2.expect
File "let_2.ml", line 3, characters 2-4:
Error: This expression has type unit but an expression was expected of type
         'a Lwt.t
