duniverse/lwt/test/ppx_expect/cases/let_2.ml
let _ =
  let%lwt () = Lwt.return () in
  ();;
